# FLS-Training

./: .env.example  .gitattributes  .gitignore  AGENT_LAUNCH_PROMPT.md  CURSOR_PROMPT_v003.md  READINESS_2026-04-14.md  READINESS_2026-04-15.md  README.md  chatgpt prompt for scoring.txt  harvest_log.jsonl  playlist_classification.jsonl  pyproject.toml  validation_results.jsonl
data/: DATA_INVENTORY.md  harvest_targets.csv
demo/: fls_demo_v3.py  fls_demo_v4.py  fls_demo_v5.py  fls_demo_v6.py
deploy/: Dockerfile.trainer  LAUNCH_GUIDE.md  fls_demo_v7_changelog.md  patch_v7_demo.py  runpod_lasana_pretrain.sh  runpod_launch.sh  runpod_v003_launch.py  runpod_watchdog.sh  s1_harvest_score_deploy.sh
docs/: ARCHITECTURE.md  BACKBLAZE_SETUP.md  CONTINUAL_LEARNING.md  COWORKER_PLAYBOOK.md  DATA_SCALING_PLAN.md  DATA_SOURCE_CATALOG.md  EXECUTION_PLAN.md  FLS-Training-Setup-Guide.md  INFRASTRUCTURE.md  LASANA_DEPLOYMENT_PLAN.md  LORA_REPORT_TRAINING_V3.md  PROJECT_STATUS.md  REPORTING_V3.md  RUNPOD_RUNBOOK.md  RUNPOD_V003_RUNBOOK.md  SCORING_VS_COACHING.md  SECOND_PASS_SCORING.md  V2_TRAINING_GUIDE.md  V3_TRAINING_GUIDE.md
memory/: accepted_training_videos.txt  learning_ledger.jsonl  trainee_profile.json  validation_reason_summary.json  validation_results.jsonl
prompts/: prompt_registry.yaml  v001_task5_chatgpt_system.md  v001_task5_coach.md  v001_task5_consensus.md  v001_task5_critique.md  v001_task5_feedback.md  v001_task5_general_critique.md  v001_task5_general_system.md  v001_task5_system.md  v002_consensus_system.md  v002_critique_system.md  v002_universal_coach_system.md  v002_universal_scoring_system.md  v003_consensus_system.md  v003_report_generation_system.md  v003_universal_scoring_system.md
rubrics/: task1_peg_transfer.yaml  task2_pattern_cut.yaml  task3_ligating_loop.yaml  task4_extracorporeal_suture.yaml  task5_intracorporeal_suture.yaml  task6_rings_needle_manipulation.yaml
scripts/: 010_ingest_video.py  011_harvest_youtube.py  011c_harvest_from_csv.py  012_harvest_playlist.py  (+87 more)
(+4816 files in other folders)
