[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fls-training"
version = "0.1.0"
description = "AI-powered FLS surgical skills training with teacher-critique-student architecture"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    "duckdb>=1.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.9",
    "jinja2>=3.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
training = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.18",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
    "wandb>=0.16",
    "safetensors>=0.4",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
